# qr-studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: exceptions.py  main.py
app/api/: routes.py
app/core/: config.py  logging.py  rate_limit.py
app/middleware/: request_id.py
app/schemas/: qr.py
app/services/: qr_service.py
app/templates/: index.html
scripts/: dev.py
static/: app.js  style.css
